Refactor folder structure and implement Create Estate API
